# FastAPI-flight_booking

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  factories.py  main.py  populate_db.py
app/api/: models.py  router.py  schemas.py  services.py
app/bot/: bot.py
app/schedule/: router.py  schemas.py
app/users/: models.py  router.py  schemas.py
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: TicketList.vue
frontend/src/pages/: Main.vue  SearchResult.vue
migrations/: env.py
migrations/versions/: 013112386b0c_initial_migration.py
